# blocks

./: .gitignore  Cargo.toml  cargo-timing.html  imgui.ini  readme.md  todo.md
.github/workflows/: rust.yml
benches/: bench.rs
crates/vox/: Cargo.toml  build.rs
crates/vox/benches/: bench.rs
crates/vox/src/: game.rs  logger.rs  main.rs  personal_world.rs  player.rs
crates/vox/src/ui/: debug_info.rs  mod.rs  ui.rs
crates/vox_core/: Cargo.toml
crates/vox_core/src/: constants.rs  lib.rs  positions.rs  utils.rs
crates/vox_io/: Cargo.toml
crates/vox_io/src/io/: file_reader.rs  file_writer.rs  mod.rs
crates/vox_render/: Cargo.toml
crates/vox_render/src/: lib.rs
crates/vox_render/src/compute_renderer/: mod.rs  renderer.rs  renderpassable.rs  shader_modules.rs  uniforms.rs  vertex.rs  view_type.rs  wgpu_state.rs
crates/vox_render/src/renderer/: chunk_render_data.rs  compute.rs  depth_texture.rs  mod.rs  normals.rs  renderer.rs  renderpassable.rs  uniforms.rs  vertex.rs  wgpu.rs  wgpu_pipeline.rs
crates/vox_render/src/shaders/: compute.shader.comp  compute.shader.frag  compute.shader.vert  main.shader.vert  shader.wgsl
crates/vox_world/: Cargo.toml
crates/vox_world/src/: big_world_renderer.rs  chunk_render_data.rs  lib.rs  player.rs
crates/vox_world/src/algorithms/: bfs_world.rs  mod.rs  noise_abstraction.rs  noise_bracket.rs  noise_default.rs  noise_simd.rs
crates/vox_world/src/blocks/: block.rs  block_mesh.rs  block_type.rs  blockside.rs  mod.rs
crates/vox_world/src/structures/: square.rs  tree.rs
crates/vox_world/src/world/: big_world.rs  meshable_chunk.rs  mod.rs  octree.rs  small_world.rs  world.rs  world_trait.rs
crates/vox_world/src/world_gen/: basic.rs  chunk.rs  chunk_gen_thread.rs  generator.rs  hills.rs  meta_chunk.rs  mod.rs  standard.rs  vertex_generation.rs
ray_tracer/: Cargo.toml  build.rs
ray_tracer/src/: main.rs  ray_tracer.rs  renderer.rs  uniforms.rs  vertex.rs  wgpu.rs  wgpu_pipeline.rs
ray_tracer/src/shaders/: main.shader.comp  main.shader.frag  main.shader.vert
shaders/: compute.comp  compute.frag  compute.shader.comp  compute.shader.frag  compute.vert  main.shader.frag  sdf_calculation.comp
src/: block.rs  chunk.rs  chunk_manager.rs  constants.rs  game.rs  input.rs  logger.rs  main.rs  main_loop.rs  personal_world.rs  player.rs  positions.rs  renderer.rs  ui.rs  utils.rs  world.rs
src/algorithms/: bfs_world.rs
src/blocks/: block.rs  block_mesh.rs  block_type.rs  blockside.rs  mod.rs
src/input/: button.rs  input.rs  keyboard.rs  mouse.rs
src/io/: file_reader.rs  file_writer.rs
src/renderer/: chunk_render_data.rs  compute.rs  depth_texture.rs  glium.rs  mod.rs  renderer.rs  uniforms.rs  vertex.rs  wgpu.rs  wgpu_pipeline.rs
src/shaders/: main.shader.frag  main.shader.vert  shader.wgsl
src/structures/: mod.rs  square.rs  tree.rs
src/tests/: bench.rs  meta_chunk.rs  mod.rs
src/ui/: debug_info.rs  ui.rs
src/world/: mod.rs  octree.rs  world.rs
src/world_gen/: basic.rs  chunk.rs  chunk_gen_thread.rs  chunk_loader.rs  meta_chunk.rs  mod.rs  vertex_generation.rs
vox_client/: Cargo.toml
vox_client/src/: game.rs  main.rs  ui_data.rs
vox_server/: Cargo.toml
vox_shared/: Cargo.toml
vox_shared/src/: constants.rs  lib.rs  logger.rs
vox_window/: Cargo.toml
vox_window/src/: lib.rs  main_loop.rs
vox_window/src/input/: button.rs  input.rs  mod.rs
vox_window/src/renderer/: mod.rs  renderer.rs  ui_renderer.rs  wgpu_state.rs
winit_window_control/: Cargo.toml
winit_window_control/src/: main_loop.rs
