[package]
name = "vox"
version = "0.0.1"
authors = ["jasperdewinther <jasper.dewinther@student.hu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
log = "0.4"
fern = "0.6"
chrono = "0.4"
nalgebra = "0.22"
num-traits = "0.2"
noise="0.6"
rayon = "1.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
winit = "0.23"
wgpu = "0.6"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
imgui-wgpu = "0.12"
imgui = "0.6"
imgui-winit-support = "0.6"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"


[profile.dev]
debug = false
opt-level = 2

[profile.test]
opt-level = 2