[package]
name = "vox_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {version="0.25", default-features = false}
wgpu = {version="0.11", default-features = false, features = ["spirv"]}
futures = "0.3"
egui_wgpu_backend = "0.14.0"
egui_winit_platform = "0.11.0"
egui = "0.15"