[package]
name = "vox"
version = "0.0.1"
authors = ["jasperdewinther <jasper.dewinther@student.hu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
log = "0.4"
fern = "0.6"
chrono = "0.4"
num-traits = "0.2"
noise="0.7"
cgmath = "0.18"
imgui-wgpu = "0.15"
imgui = "0.7"
imgui-winit-support = "0.7"
winit_window_control = {git = "https://github.com/jasperdewinther/winit_abstraction", branch = "main"}
serde-big-array = "0.3"
rand_distr ="0.4"
vox_core = {path="../vox_core"}
vox_render = {path="../vox_render"}
vox_io = {path="../vox_io"}
vox_world = {path="../vox_world"}
winit = "0.25"
rayon = "1.4"
wgpu = "0.8"

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2