[package]
name = "vox"
version = "0.0.1"
authors = ["jasperdewinther <jasper.dewinther@student.hu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
log = "0.4"
fern = "0.6"
chrono = "0.4"
noise= {version="0.7", default-features = false}
winit_window_control = {git = "https://github.com/jasperdewinther/winit_abstraction", branch = "main"}
#winit_window_control = {path="../../../winit_abstraction"}
serde-big-array = "0.3"
rand_distr ="0.4"
vox_core = {path="../vox_core"}
vox_render = {path="../vox_render"}
vox_world = {path="../vox_world"}
winit = "0.25"
rayon = "1.4"
wgpu = {version="0.10", default-features=false}


[build-dependencies]
anyhow = "1.0"
glob = "0.3"
shaderc = "0.7"
rayon = "1.5"