[package]
name = "vox_io"
version = "0.1.0"
authors = ["jasperdewinther <jasper.dewinther@student.hu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {git = "https://github.com/Lokathor/bytemuck", branch = "main", features=["min_const_generics"]}
