[package]
name = "vox_render"
version = "0.1.0"
authors = ["jasperdewinther <jasper.dewinther@student.hu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcmp = "0.0.6"
wgpu = {version="0.8", features = ["cross"]}
futures = "0.3"
winit = "0.25"
rayon = "1.4"
nalgebra = "0.26"
bytemuck = { version = "1.4", features = [ "derive" ] }
vox_core = {path="../vox_core"}


