[package]
name = "vox_render"
version = "0.1.0"
authors = ["jasperdewinther <jasper.dewinther@student.hu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {version="0.10", default-features = false, features = ["spirv"]}
futures = "0.3"
winit = "0.25"
nalgebra = {version="0.29", default-features=false, features=["std"]}
bytemuck = { version = "1.4", features = [ "derive" ] }
vox_core = {path="../vox_core"}


