[package]
name = "vox_render"
version = "0.1.0"
authors = ["jasperdewinther <jasper.dewinther@student.hu.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcmp = "0.0.6"
wgpu = {version="0.8", default-features=false}
futures = "0.3"
winit = "0.24"
rayon = "1.4"
nalgebra = {version="0.22", default-features=false, features=["std"]}
bytemuck = { version = "1.4", features = [ "derive" ] }
vox_core = {path="../vox_core"}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"