[package]
name = "vox_world"
version = "0.1.0"
authors = ["jasperdewinther <jasper.dewinther@student.hu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4"
vox_core = {path="../vox_core"}
log = "0.4"
vox_render = {path="../vox_render"}
winit = "0.25"
winit_window_control = {git = "https://github.com/jasperdewinther/winit_abstraction", branch = "main"}
#winit_window_control = {path="../../../winit_abstraction"}
nalgebra = {version="0.29", default-features=false}
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
wgpu = {version="0.10", default-features=false}
noise= {version="0.7", default-features = false}
rand_distr ="0.4"
bytemuck = { version = "1.4", features = [ "derive" ] }
serde-big-array = "0.3"
